# generative-ai-cdk-constructs-samples

./: .gitignore  CHANGELOG.md  README.md
samples/amazon-nova-samples/: README.md
samples/base-stack/: README.md  cdk.json  package-lock.json  package.json
samples/bedrock-agent/: .gitignore  README.md  cdk.json  package-lock.json  package.json  pnpm-lock.yaml
samples/bedrock-agent-ui-wrapper/: .gitignore  README.md  RESOURCES.md  app.py  cdk.context.json  config.yml  pyproject.toml
samples/bedrock-agent-ui-wrapper/assets/lambda/functions/agent_handler/: index.py
samples/bedrock-agent-ui-wrapper/assets/lambda/functions/stream_handler/: index.py
samples/bedrock-agent-ui-wrapper/assets/lambda/layers/requests_auth/: requirements.txt
samples/bedrock-agent-ui-wrapper/infra/: capsule_stack.py
samples/bedrock-agent-ui-wrapper/infra/example_bedrock_agent/: agent_schema.json  example_bedrock_agent_construct.py
samples/bedrock-agent-ui-wrapper/infra/frontend_construct/: frontend_fargate_construct.py
samples/bedrock-agent-ui-wrapper/infra/graphql_api_construct/: api_auth_construct.py  lambda_layers_construct.py
samples/bedrock-agent-ui-wrapper/infra/graphql_api_construct/schema/: schema.graphql
samples/bedrock-agent-ui-wrapper/streamlit_app/: Dockerfile  app.py  requirements.txt
samples/bedrock-agent/lambda/action-group/: gutendex.py  index.py  pyproject.toml
samples/bedrock-data-automation/: README.md  cdk.json  package-lock.json  package.json
samples/bedrock-web-crawler/: README.md  cdk.json  package-lock.json  package.json
samples/contract-compliance-analysis/backend/check_legislation/sfn/check_legislation/check_legislation_agent_fn/: README.md  index.py  pyproject.toml
(+951 files in other folders)
