[tool.poetry]
name = "action-group"
version = "0.1.0"
description = ""
authors = ["Jeff Strunk <strunkjd@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
